Web interface: Fix bug in connection section display on small screens.

--- a/static/worktime/css/main.css
+++ b/static/worktime/css/main.css
@@ -8,6 +8,9 @@
   .panel-body > section {
     float: none !important;
   }
+  .panel-body > section#connection {
+    float: right !important;
+  }
 }
 
 #history .period {
